--- a/package.json
+++ b/package.json
@@ -10,12 +10,14 @@
   },
   "dependencies": {
     "@types/mongoose": "^5.11.97",
+    "@types/react-datepicker": "^7.0.0",
     "@types/react-icons": "^3.0.0",
     "chart.js": "^4.4.4",
     "mongoose": "^8.6.3",
     "next": "14.2.13",
     "react": "^18",
     "react-chartjs-2": "^5.2.0",
+    "react-datepicker": "^7.4.0",
     "react-dom": "^18",
     "react-icons": "^5.3.0",
     "recharts": "^2.12.7"
