--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@types/chart.js": "^2.9.41",
     "@types/mongoose": "^5.11.97",
     "@types/react-datepicker": "^7.0.0",
     "@types/react-icons": "^3.0.0",
